--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -129,8 +129,6 @@
 }
 
 .m-footer--licence {
-    padding: 5px 0 0;
-
     a {
         border-bottom: 1px solid transparent;
         transition: color 150ms, border-bottom-color 150ms;
